[package]
name = "colol"
version = "0.2.0"
authors = ["DerpMarine <derpmarine168@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A supersimple terminal color library."

exclude = [
    ".vscode/*",
    "logo.png",
]


homepage = "https://github.com/derpmarine168/colol"
repository = "https://github.com/derpmarine168/colol"
readme = "README.md"
keywords = ["color", "string", "term", "ansi_term", "windows", ""]

[dependencies]
