[package]
name = "colol"
version = "0.2.2"
authors = ["DerpMarine <derpmarine168@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A supersimple terminal color library."

exclude = [
    ".vscode/*",
    "logo.png",
]


homepage = "https://github.com/derpmarine168/colol"
repository = "https://github.com/derpmarine168/colol"
documentation = "https://docs.rs/colol/"
readme = "README.md"
keywords = ["color", "string", "term", "ansi_term", "windows"]

categories = ["command-line-interface"]

[dependencies]

[badges]

travis-ci = { repository = "derpmarine168/colol/", branch = "master" }

is-it-maintained-issue-resolution = { repository = "derpmarine168/colol" }
is-it-maintained-open-issues = { repository = "derpmarine168/colol" }